# SciTec-Coding

./: CMakeLists.txt
.github/workflows/: c-cpp.yml
question/: SciTec_code_problem_data.csv
reference/: SciTec_code_problem_data.csv
src/: ECEFPoint.h  LLAPoint.h  XYZVelocity.h  config.h  conversion.cc  conversion.h  linear-interpolation.cc  linear-interpolation.h  main.cc  parser.cc  parser.h  row.cc  row.h  status.h  unit.h
tests/: main.cc
